# emulsion

./: .gitignore  README.md  io.github.lainsce.Emulsion.Devel.json  io.github.lainsce.Emulsion.doap  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
build-aux/: post_install.py
build-aux/flatpak/: io.github.lainsce.Emulsion.Devel.json  io.github.lainsce.Emulsion.json
data/: adwaita-plus.css  app.css  io.github.lainsce.Emulsion.appdata.xml.in  io.github.lainsce.Emulsion.desktop.in  io.github.lainsce.Emulsion.gresource.xml  io.github.lainsce.Emulsion.gschema.xml  io.github.lainsce.Emulsion.metainfo.xml.in  meson.build  neowaita.css  style-dark.css  style-hc.css  style.css
data/icons/: meson.build
data/ui/: cep.ui  keys.ui  menu.ui  pid.ui  window.ui
po/: LINGUAS  POTFILES  README.md  de.po  es.po  fr.po  hr.po  io.github.lainsce.Emulsion.pot  it.po  meson.build  nl.po  pl.po  pt_BR.po  sk.po
src/: color.vala  coloreditpopover.vala  main.vala  manager.vala  palette.vala  palettebutton.vala  pid.vala  portal.vala  settings.vala  utils.vala  window.vala
